deps: kotlin / ktor